--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 /* Mobile fix */
-@media (max-width: 380px) {
+@media (max-width: 450px) {
   .top-header {
     flex-direction: column;
     gap: 6px;
@@ -235,6 +235,17 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 25px;
+}
+
+.footer-grid h4 {
+  color: #fff;
+  font-size: 17px;
+  margin-bottom: 8px;
+}
+
+.footer-grid p {
+  font-size: 15px;
+  margin: 6px 0;
 }
 
 .footer-copy {
