--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
 .header-inner {
   width: 100%;
   height: 70px;
-  background: #111827;   /* store bar color */
+  background: #061D3C;   /* store bar color */
+  border-bottom: 1px solid #5BC0BE;
   display: flex;
   align-items: center;
   padding: 0 16px;       /* left-right spacing only */
@@ -27,8 +28,8 @@ body {
 
 /* LOGO LEFT */
 .header-logo {
-  width: 48px;
-  height: 48px;
+  width: 65px;
+  height: 65px;
   object-fit: contain;
 }
 
@@ -37,7 +38,7 @@ body {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 20px;
+  font-size: 28px;
   font-weight: 800;
   letter-spacing: 1px;
   color: #fff;
@@ -46,16 +47,16 @@ body {
 /* MOBILE */
 @media (max-width: 400px) {
   .header-inner {
-    height: 64px;
+  height: 55px;
   }
 
   .header-logo {
-    width: 42px;
-    height: 42px;
+    width: 50px;
+    height: 50px;
   }
 
   .header-title {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
 
