--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
 
 /* LOGO LEFT */
 .header-logo {
-  width: 58px;
-  height: 58px;
+  width: 65px;
+  height: 65px;
   object-fit: contain;
 }
 
@@ -38,40 +38,78 @@ body {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 26px;
+  font-size: 20px;
   font-weight: 800;
   letter-spacing: 1px;
   color: #fff;
 }
 
 /* MOBILE */
-@media (max-width: 420px) {
+@media (max-width: 425px) {
   .header-inner {
   height: 50px;
   }
 
   .header-logo {
-    width: 48px;
-    height: 48px;
+    width: 55px;
+    height: 55px;
   }
 
   .header-title {
     font-size: 18px;
   }
+
+.footer-social a {
+  margin: 0 10px;
+  color: #5BC0BE;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.footer-grid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+}
+
+.footer-grid h4 {
+  color: #fff;
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+.footer-grid p {
+  font-size: 12px;
+  margin: 6px 0;
+}
+
+.footer-copy {
+  text-align: center;
+  font-size: 11px;
+  margin-top: 25px;
+  color: #777;
+}
+
+.site-footer a {
+  color: #CBCCCD;
+  text-decoration: none;
+}
 }
 
 
 /* ===== TEXT ===== */
 .subtitle {
   text-align: center;
-  font-size: 14px;
+  font-size: 13px;
   color: #E8ECEE;
+  margin-top: 14px;
 }
 
 .description {
   text-align: center;
-  font-size: 15px;
-  color: #CBCCCD;
+  font-size: 14px;
+  color: #C7C7C7;
   padding: 10px 18px 20px;
   line-height: 1.5;
 }
@@ -119,11 +157,12 @@ body {
 .section {
   text-align: left;
   padding: 22px 16px;
-  border-top: 1px solid #999;
+  border-top: 1px solid #5BC0BE;
 }
 
 .diorama-title {
   font-size: 18px;
+  color: #fff;
   margin-bottom: 10px;
 }
 
