--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
 
 /* LOGO LEFT */
 .header-logo {
-  width: 65px;
-  height: 65px;
+  width: 85px;
+  height: 85px;
   object-fit: contain;
 }
 
@@ -51,8 +51,8 @@ body {
   }
 
   .header-logo {
-    width: 55px;
-    height: 55px;
+    width: 80px;
+    height: 80px;
   }
 
   .header-title {
@@ -86,7 +86,7 @@ body {
 
 .footer-copy {
   text-align: center;
-  font-size: 3px;
+  font-size: 10px;
   margin-top: 25px;
   color: #777;
 }
@@ -118,7 +118,7 @@ body {
 
 /* ===== BUTTON ===== */
 .buy-btn {
-  margin-top: 12px;
+  margin-top: 8px;
   display: inline-block;
   background: #5BC0BE;
   color: #fff;
@@ -142,6 +142,7 @@ body {
   text-align: center;
   font-size: 14px;
   color: #C7C7C7;
+  border-bottom: 1px solid #5BC0BE;
   padding: 10px 18px 20px;
   line-height: 1.5;
 }
@@ -293,7 +294,7 @@ body {
 /* ===== FOOTER ===== */
 .site-footer {
   background: #0B132B;
-  border-top: 1px solid #999;
+  border-top: 1px solid #5BC0BE;
   padding: 30px 16px;
   color: #A6ABB0;
 }
