--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ body {
   text-align: center;
   font-size: 8px;   /* base size for all */
   margin-top: 25px;
-  color: 777;
+  color: #cbcccd;
   line-height: 1.6;
 }
 
