--- a/style.css
+++ b/style.css
@@ -124,7 +124,26 @@ body {
 }
 @media (min-width: 600px) {
   .footer-copy {
-    font-size: 12px;
+    font-size: 15px;
+  }
+  .side-menu {
+    width: 300px;
+  }
+  .page h1 {
+  font-size: 26px;
+  margin-bottom: 16px;
+  color: #fff;
+}
+
+.page p {
+  font-size: 18px;
+  line-height: 1.6;
+  color: #CBCCCD;
+  margin-bottom: 14px;
+}
+  .close-btn {
+  font-size: 22px;
+  cursor: pointer;
   }
 }
 
@@ -183,13 +202,13 @@ body {
 }
 
 .page h1 {
-  font-size: 22px;
+  font-size: 20px;
   margin-bottom: 16px;
   color: #fff;
 }
 
 .page p {
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.6;
   color: #CBCCCD;
   margin-bottom: 14px;
@@ -327,7 +346,6 @@ body {
 
 .footer-social a {
   margin: 0 10px;
-  color: #5BC0BE;
   text-decoration: none;
   font-weight: 600;
 }
@@ -410,7 +428,7 @@ body {
 }
 
 .close-btn {
-  font-size: 22px;
+  font-size: 18px;
   cursor: pointer;
 }
 
@@ -418,9 +436,9 @@ body {
 .side-menu a {
   display: block;
   padding: 12px 0;
-  color: #5BC0BE;
+  color: #cbcccd;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 10px;
   border-bottom: 1px solid rgba(255,255,255,0.1);
 }
 
@@ -434,10 +452,4 @@ body.menu-open .menu-overlay {
   pointer-events: auto;
 }
 
-/* Desktop width adjustment */
-@media (min-width: 768px) {
-  .side-menu {
-    width: 300px;
-  }
-}
 
