--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
-
 body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: var(--bg-main);
+  color: var(--text-main);
+  transition: background 0.3s ease, color 0.3s ease;
+}
+body1 {
   margin: 0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
   background: radial-gradient(1200px 600px at 10% -10%, #13224a, transparent),
               radial-gradient(1200px 600px at 110% 10%, #0a7cff33, transparent),
-              var(--bg);
-  color: var(--text);
+              var(--bg-main);
+  color: var(--text-main);
 }
 
 
 /* ===== THEME VARIABLES ===== */
 :root {
-  --bg-main: #0B132B;
+  --bg-main: #0a0f1f;
   --bg-header: #061D3C;
   --sb-titel:#E8ECEE;
   --sb-discr:#C7C7C7;
@@ -24,10 +30,7 @@ body {
   --text-main: #ffffff;
   --text-muted: #C7C7C7;
   --accent: #5BC0BE;
-    --bg: #0a0f1f;
-  --card: #121a2e;
-  --accent: #6ee7f9;
-  --text: #e5e7eb;
+  
 }
 
 /* LIGHT THEME */
