--- a/style.css
+++ b/style.css
@@ -186,21 +186,6 @@ body.light-theme {
 .products {
   padding: 0px;
 }
-/* ===== TEXT ===== */
-.subtitle {
-  text-align: center;
-  font-size: 13px;
-  color:var(--sb-titel);
-  margin-top: 14px;
-}
-
-.description {
-  text-align: center;
-  font-size: 14px;
-  color: var(--sb-discr);
-  padding: 10px 18px 20px;
-  line-height: 1.5;
-}
 .search-bar {
   width: 90%;
   max-width: 1000px;
@@ -642,65 +627,13 @@ body.light-theme .toggle-switch {
   box-shadow: 0 10px 25px rgba(0,0,0,.25);
 }
 .sale-title {
+  font-size: 16px;
   font-weight: 900;
   letter-spacing: .3px;
 }
-.sale-square {
-  position: relative;
-  width: 90%;
-  max-width: 500px;
-  aspect-ratio: 4 / 1;
-
-  margin: 14px auto 10px;
-  border-radius: 12px;
-  overflow: hidden;
-
-  background: #111;
-  border: 1px solid #383838;
-
-  text-decoration: none;
-  display: block;
-}
-
-/* background image */
-.sale-bg {
-  position: absolute;
-  inset: 0;
-  background: url("images/sale-bg.png") center/cover no-repeat;
-  opacity: 0.35;
-}
-
-/* text overlay */
-.sale-text {
-  position: relative;
-  z-index: 2;
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  text-align: center;
-  color: #fff;
-  padding: 10px;
-}
-
-.sale-tite {
-  font-size: 16px;
-  font-weight: 700;
-  letter-spacing: 0.6px;
-}
-
-.sale-time {
-  margin-top: 6px;
-  font-size: 13px;
-  opacity: 0.85;
-  line-height: 1.4;
-}
 
 /* hover */
-.sale-square:hover {
+.sale-cta-inner:hover {
   box-shadow: 0 0 12px rgba(91,192,190,0.4);
   transform: scale(1.03);
   transition: 0.2s ease;
