--- a/style.css
+++ b/style.css
@@ -180,7 +180,19 @@ body.light-theme {
 .hero h1 { font-size: clamp(28px, 5vw, 42px); margin-bottom: 10px; }
 .hero p { opacity: .8; margin-bottom: 18px; }
 .cta {
+  
+.sale-cta {
   max-width: 180px;      /* control how wide it can go on desktop */
+  text-align: ce
+  position: relative;
+  display: block;
+  margin: 16px;
+  text-decoration: none;
+  transition: transform 5s ease;
+}
+.sale-cta-inner {
+  max-width: 180px;      /* control how wide it can go on desktop */
+  text-align: center;
   display: inline-block;
   padding: 12px 18px;
   border-radius: 999px;
@@ -630,6 +642,7 @@ body.light-theme .toggle-switch {
 }
 .sale-cta-inner {
   max-width: 180px;      /* control how wide it can go on desktop */
+  text-align: center;
   border-radius: 999px;
   padding: 12px 18px;
   background: linear-gradient(135deg, #ff7a18, #ffd166);
