--- a/style.css
+++ b/style.css
@@ -653,6 +653,8 @@ body.light-theme .toggle-switch {
   transition: 0.2s ease;
 }
 .middle {
+  display: flex;
+  flex-direction: column; 
   text-align: center;
 }
 .slider-wrap {
