--- a/style.css
+++ b/style.css
@@ -458,6 +458,8 @@ body.menu-open .side-menu a {
 .side-menu a:nth-child(6) { transition-delay: 0.20s; }
 .side-menu a:nth-child(7) { transition-delay: 0.25s; }
 .side-menu a:nth-child(8) { transition-delay: 0.30s; }
+.side-menu a:nth-child(9) { transition-delay: 0.35s; }
+
 .theme-toggle {
   display: flex;
   justify-content: space-between;
